[gd_scene load_steps=15 format=3 uid="uid://q6871l13ss6m"]

[ext_resource type="Script" uid="uid://bokjt47usnxpn" path="res://scripts/conveyor_belt.gd" id="1_65uwv"]
[ext_resource type="Texture2D" uid="uid://7df7ce5x4sol" path="res://assets/gear/gear_1.png" id="2_it644"]
[ext_resource type="Texture2D" uid="uid://oht5fir1axwa" path="res://assets/gear/gear_2.png" id="3_pim3x"]
[ext_resource type="Texture2D" uid="uid://daqiwailhh722" path="res://assets/gear/gear_3.png" id="4_nlha8"]
[ext_resource type="Texture2D" uid="uid://bvy7aj6qjbjyh" path="res://assets/gear/gear_4.png" id="5_g4y7j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_444fa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_it644")
}, {
"duration": 1.0,
"texture": ExtResource("3_pim3x")
}, {
"duration": 1.0,
"texture": ExtResource("4_nlha8")
}, {
"duration": 1.0,
"texture": ExtResource("5_g4y7j")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4n2of"]
radius = 110.0

[sub_resource type="SpriteFrames" id="SpriteFrames_pim3x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_it644")
}, {
"duration": 1.0,
"texture": ExtResource("3_pim3x")
}, {
"duration": 1.0,
"texture": ExtResource("4_nlha8")
}, {
"duration": 1.0,
"texture": ExtResource("5_g4y7j")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_it644"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_it644")
}, {
"duration": 1.0,
"texture": ExtResource("3_pim3x")
}, {
"duration": 1.0,
"texture": ExtResource("4_nlha8")
}, {
"duration": 1.0,
"texture": ExtResource("5_g4y7j")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_65uwv"]
radius = 110.0

[sub_resource type="Gradient" id="Gradient_4dsgs"]
offsets = PackedFloat32Array(0.76666665, 1)
colors = PackedColorArray(0.32941177, 0.0627451, 0.0627451, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_03uyg"]
gradient = SubResource("Gradient_4dsgs")
height = 14
fill = 2
fill_from = Vector2(0.50233644, 0.64719623)
fill_to = Vector2(0.48831776, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_4n2of"]
a = Vector2(11, 0)
b = Vector2(330, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_65uwv"]
a = Vector2(-1.7484581e-07, -2)
b = Vector2(-319, -1.9999733)

[node name="ConveyorBelt" type="Node2D"]
script = ExtResource("1_65uwv")

[node name="WheelLeft" type="StaticBody2D" parent="."]
constant_angular_velocity = -1.5707964

[node name="WheelLeft" type="AnimatedSprite2D" parent="WheelLeft"]
sprite_frames = SubResource("SpriteFrames_444fa")
autoplay = "default"
frame_progress = 0.9052367

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelLeft"]
shape = SubResource("CircleShape2D_4n2of")

[node name="WheelMiddle" type="AnimatedSprite2D" parent="."]
position = Vector2(320, 0)
sprite_frames = SubResource("SpriteFrames_pim3x")
autoplay = "default"
frame_progress = 0.5146602

[node name="WheelRight" type="StaticBody2D" parent="."]
position = Vector2(640, 0)
constant_angular_velocity = 1.5707964

[node name="WheelRight" type="AnimatedSprite2D" parent="WheelRight"]
sprite_frames = SubResource("SpriteFrames_it644")
autoplay = "default"
frame_progress = 0.0216403

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelRight"]
shape = SubResource("CircleShape2D_65uwv")

[node name="TopMat" type="StaticBody2D" parent="."]
constant_linear_velocity = Vector2(-600, 0)

[node name="TopMat" type="Sprite2D" parent="TopMat"]
position = Vector2(159.99998, -58)
scale = Vector2(4.984375, 1)
texture = SubResource("GradientTexture2D_03uyg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopMat"]
position = Vector2(-11, -63)
shape = SubResource("SegmentShape2D_4n2of")
one_way_collision = true
one_way_collision_margin = 3.5

[node name="BottomMat" type="StaticBody2D" parent="."]
constant_linear_velocity = Vector2(600, 0)

[node name="BottomMat" type="Sprite2D" parent="BottomMat"]
position = Vector2(159.50002, 58)
scale = Vector2(4.984375, 1)
texture = SubResource("GradientTexture2D_03uyg")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomMat"]
position = Vector2(0, 61)
rotation = 3.1415927
shape = SubResource("SegmentShape2D_65uwv")
one_way_collision = true
